# devcon

./: Cargo.toml  README.md  devcon.example.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml
agent/src/: main.rs
proto/: Cargo.toml  agent.proto
schema/: Cargo.toml
schema/src/: devcontainer.rs  error.rs  feature.rs  feature_ref.rs  image_metadata.rs  lib.rs  lifecycle.rs  lockfile.rs
src/: command.rs  config.rs  devcontainer.rs  error.rs  feature.rs  lib.rs  main.rs  output.rs  workspace.rs
src/driver/: agent.rs  agent_socket.rs  container.rs  control_server.rs  dockerfile.rs  environment.rs  feature_process.rs  lifecycle.rs  mod.rs  orchestrator.rs  runtime.rs  ssh_proxy.rs
src/driver/runtime/: apple.rs  container.rs  docker.rs
tests/: main.rs  test_utils.rs
