[workspace]
members = [".", "agent", "proto"]

[workspace.package]
version = "0.2.10"
edition = "2024"
license = "MIT"

[workspace.dependencies]
thiserror = "2.0.10"
clap = "4.5.57"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.3"
tempfile = "3.24"
oci-spec = "0.8.4"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
flate2 = { version = "1.1.9", features = ["zlib", "zlib-rs"] }
tar = "0.4.44"
dirs = "6.0"
minijinja = "2.15.1"
indicatif = "0.18.3"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
fs_extra = "1.3.0"
prost = "0.14.3"
prost-build = "0.14.3"
bytes = "1.11.1"
console = "0.16.2"
dialoguer = "0.11"
open = "5.3.3"
strip-ansi-escapes = "0.2.1"
sha2 = "0.10.9"
json-strip-comments = "3.1.0"
comfy-table = "7.2.2"
assert_cmd = "2.1.2"
daemonize = "0.5"
pidlock = "0.2.2"
devcon-proto = { path = "proto" }

[package]
name = "devcon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast TUI application for managing and launching development containers"
repository = "https://github.com/kreemer/devcon"
homepage = "https://github.com/kreemer/devcon"
documentation = "https://github.com/kreemer/devcon"
readme = "README.md"
keywords = ["devcontainer", "tui", "development", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["DevCon Contributors"]

[dependencies]
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
tempfile.workspace = true
oci-spec.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
dirs.workspace = true
minijinja.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
fs_extra.workspace = true
devcon-proto.workspace = true
prost.workspace = true
bytes.workspace = true
console.workspace = true
dialoguer.workspace = true
open.workspace = true
strip-ansi-escapes.workspace = true
sha2.workspace = true
json-strip-comments.workspace = true
comfy-table.workspace = true
pidlock.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
