[workspace]
members = [".", "agent", "proto", "schema"]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
thiserror = "2.0.18"
clap = "4.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
yaml_serde = "0.10.4"
tempfile = "3.27"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
flate2 = { version = "1.1.9", features = ["zlib", "zlib-rs"] }
tar = "0.4.46"
dirs = "6.0"
minijinja = "2.20.0"
indicatif = "0.18.4"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
fs_extra = "1.3.0"
prost = "0.14.3"
prost-build = "0.14.3"
bytes = "1.11.1"
console = "0.16.3"
dialoguer = "0.12"
open = "5.3.5"
strip-ansi-escapes = "0.2.1"
sha2 = "0.11"
json-strip-comments = "3.1.1"
comfy-table = "7.2.2"
assert_cmd = "2.2.2"
pidlock = "0.2.2"
tokio = "1.52.3"
openport = "0.3.0"
serial_test = "3"
devcon-proto = { path = "proto" }
schema = { path = "schema" }

[package]
name = "devcon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A blazingly fast TUI application for managing and launching development containers"
repository = "https://github.com/devconhq/devcon"
homepage = "https://github.com/devconhq/devcon"
documentation = "https://github.com/devconhq/devcon"
readme = "README.md"
keywords = ["devcontainer", "tui", "development", "container", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["DevCon Contributors"]

[dependencies]
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
tempfile.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
dirs.workspace = true
minijinja.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
fs_extra.workspace = true
devcon-proto.workspace = true
prost.workspace = true
bytes.workspace = true
console.workspace = true
dialoguer.workspace = true
open.workspace = true
strip-ansi-escapes.workspace = true
sha2.workspace = true
json-strip-comments.workspace = true
comfy-table.workspace = true
pidlock.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
schema.workspace = true
openport.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
openport.workspace = true
serial_test.workspace = true
