[package]
name = "devcon-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devcon-proto.workspace = true
prost.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
daemonize.workspace = true

[[bin]]
name = "devcon-agent"
path = "src/main.rs"
